name:                board-game-planner
version:             0.0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/cjduncana/board-game-planner#readme
license:             MIT
license-file:        LICENSE
author:              Christopher Duncan
maintainer:          cj.duncan.a@gmail.com
copyright:           2020 Christopher Duncan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable board-game-planner-exe
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -threaded -O2 -rtsopts -with-rtsopts=-N -fplugin=Polysemy.Plugin -flate-specialise -fspecialise-aggressively
  build-depends:    base >= 4 && < 5
                  , argon2
                  , bytestring
                  , containers
                  , crypto-rng
                  , email-validate
                  , HTTP
                  , http-client
                  , http-client-tls
                  , jwt
                  , morpheus-graphql
                  , polysemy
                  , polysemy-plugin
                  , scotty
                  , sqlite-simple
                  , text-short
                  , text
                  , time
                  , uuid
                  , xml-conduit
                  , xml-conduit-decode
  default-extensions:
                    DataKinds
                  , DeriveAnyClass
                  , DeriveGeneric
                  , FlexibleContexts
                  , GADTs
                  , LambdaCase
                  , NamedFieldPuns
                  , OverloadedStrings
                  , PolyKinds
                  , RankNTypes
                  , ScopedTypeVariables
                  , TemplateHaskell
                  , TypeApplications
                  , TypeOperators
                  , TypeFamilies
  default-language: Haskell2010
  other-modules: Args.ListEvents
               , Effects.BoardGameGeek
               , Effects.CryptoHash
               , Effects.Event
               , Effects.EventGame
               , Effects.EventPlayer
               , Effects.User
               , Environment
               , Migration
               , Mutation
               , Query
               , Resolver.Auth
               , Resolver.BoardGame
               , Resolver.Event
               , Resolver.User
               , Types.BoardGame
               , Types.Coordinate
               , Types.EmailAddress
               , Types.Event
               , Types.EventID
               , Types.HashedPassword
               , Types.JWT
               , Types.NonEmptyText
               , Types.Password
               , Types.PositiveInteger
               , Types.Time
               , Types.UUID
               , Types.User

test-suite board-game-planner-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , app
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-extensions:
                    OverloadedStrings
                  , QuasiQuotes
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cjduncana/board-game-planner
